// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroBanner > should render with many props assigned 1`] = `
<div
  className="bg-center bg-no-repeat bg-cover flex items-center justify-between w-full fill-current bg-secondary text-white pt-20 text-shadow-[0_0_15px_#111111] min-h-dvh test"
  style={
    {
      "backgroundImage": "linear-gradient(hsl(215, 30%, 10%, 0.7),hsl(215, 30%, 10%, 0.7)), url(https://operation-code-assets.s3.us-east-2.amazonaws.com/heroBanner/stock_family-2.jpg)",
    }
  }
>
  <div
    className="flex flex-col items-center justify-center mx-auto w-full my-[3.5rem] max-w-[1400px] sm:w-[85%]"
  >
    <h1
      className="border-b-4 border-b-primary text-center mb-4"
      data-testid="HERO_BANNER_H1"
    >
      Test
    </h1>
    Testing 123
  </div>
</div>
`;

exports[`HeroBanner > should render with required props 1`] = `
<div
  className="bg-center bg-no-repeat bg-cover flex items-center justify-between w-full fill-current bg-secondary text-white pt-20 text-shadow-[0_0_15px_#111111] min-h-dvh"
>
  <div
    className="flex flex-col items-center justify-center mx-auto w-full my-[3.5rem] max-w-[1400px] sm:w-[85%]"
  >
    <h1
      className=""
      data-testid="HERO_BANNER_H1"
    >
      Test
    </h1>
  </div>
</div>
`;
